<resources>
    <string name="app_name">Prueba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">Last name</string>
    <string name="Age">Age</string>
    <string name="Add">Add</string>
    <string name="CustomNumber">1</string>
    <string name="CustomeFirstName">Jorge L</string>
    <string name="CustomeLastName">Gamarra O</string>
    <string name="CustomeAge">(31)</string>
    <string name="ButtonUpDate">Up date</string>
    <string name="UpDateFirstName">First name</string>
    <string name="UpDateLastName">Last name</string>
    <string name="UpDateAge">Age</string>
    <string name="itemdelete">ItemDelete</string>
</resources>